add public key api
